<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <artifactId>ride-austin</artifactId>
    <groupId>com.rideaustin</groupId>
    <version>1.0.0</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <properties>
    <sonar.skip>true</sonar.skip>
  </properties>

  <artifactId>app-itests</artifactId>

  <dependencies>
    <dependency>
      <groupId>com.rideaustin</groupId>
      <artifactId>app</artifactId>
      <version>${project.version}</version>
      <classifier>classes</classifier>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.rideaustin</groupId>
      <artifactId>admin-jobs</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
    </dependency>
    <dependency>
      <groupId>com.jayway.jsonpath</groupId>
      <artifactId>json-path</artifactId>
      <version>2.2.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.skyscreamer</groupId>
      <artifactId>jsonassert</artifactId>
      <version>1.5.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
    </dependency>
    <dependency>
      <groupId>com.rideaustin</groupId>
      <artifactId>test-api</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>local</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>io.fabric8</groupId>
            <artifactId>docker-maven-plugin</artifactId>
            <version>0.21.0</version>
            <configuration>
              <logDate>default</logDate>
              <autoPull>true</autoPull>
              <images>
                <image>
                  <alias>db</alias>
                  <name>rideaustin/mysql</name>
                  <build>
                    <dockerFile>Dockerfile</dockerFile>
                    <dockerFileDir>${project.basedir}/src/itest/docker</dockerFileDir>
                  </build>
                  <run>
                    <env>
                      <MYSQL_ROOT_PASSWORD>toor</MYSQL_ROOT_PASSWORD>
                      <MYSQL_DATABASE>ride_db</MYSQL_DATABASE>
                      <MYSQL_USER>test</MYSQL_USER>
                      <MYSQL_PASSWORD>test123</MYSQL_PASSWORD>
                    </env>
                    <tmpfs>
                      <mount>/var/lib/mysql:rw</mount>
                    </tmpfs>
                    <ports>
                      <port>3307:3306</port>
                    </ports>
                    <wait>
                      <log>mysqld: ready for connections</log>
                      <time>15000</time>
                    </wait>
                  </run>
                </image>
                <image>
                  <alias>redis</alias>
                  <name>redis:3</name>
                  <run>
                    <ports>
                      <port>6378:6379</port>
                    </ports>
                    <wait>
                      <log>The server is now ready to accept connections on port 6379</log>
                      <time>5000</time>
                    </wait>
                  </run>
                </image>
              </images>
            </configuration>
            <executions>
              <execution>
                <id>start</id>
                <phase>pre-integration-test</phase>
                <goals>
                  <goal>build</goal>
                  <goal>start</goal>
                </goals>
              </execution>
              <execution>
                <id>stop</id>
                <phase>post-integration-test</phase>
                <goals>
                  <goal>stop</goal>
                </goals>
                <configuration>
                  <removeVolumes>true</removeVolumes>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <version>2.20</version>
            <configuration>
              <properties>
                <property>
                  <name>listener</name>
                  <value>com.rideaustin.testrail.TestCasesLogger</value>
                </property>
              </properties>
              <systemProperties>
                <testcases.logfile>${project.build.directory}/test-cases.log</testcases.logfile>
              </systemProperties>
              <argLine>-Xmx10240m</argLine>
            </configuration>
            <executions>
              <execution>
                <id>integration-test</id>
                <goals>
                  <goal>integration-test</goal>
                  <goal>verify</goal>
                </goals>
                <configuration>
                  <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                  <argLine>${failsafeArgLine} -Duser.timezone=UTC</argLine>
                  <includes>
                    <include>**/*IT.java</include>
                  </includes>
                  <argLine>-Xmx10240m</argLine>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>jenkins</id>
      <build>
        <plugins>
          <plugin>
            <groupId>io.fabric8</groupId>
            <artifactId>docker-maven-plugin</artifactId>
            <version>0.21.0</version>
            <configuration>
              <logDate>default</logDate>
              <autoPull>true</autoPull>
              <images>
                <image>
                  <alias>db</alias>
                  <name>rideaustin/mysql</name>
                  <build>
                    <dockerFile>Dockerfile</dockerFile>
                    <dockerFileDir>${project.basedir}/src/itest/docker</dockerFileDir>
                  </build>
                  <run>
                    <env>
                      <MYSQL_ROOT_PASSWORD>toor</MYSQL_ROOT_PASSWORD>
                      <MYSQL_DATABASE>ride_db</MYSQL_DATABASE>
                      <MYSQL_USER>test</MYSQL_USER>
                      <MYSQL_PASSWORD>test123</MYSQL_PASSWORD>
                    </env>
                    <ports>
                      <port>3307:3306</port>
                    </ports>
                    <wait>
                      <log>mysqld: ready for connections</log>
                      <time>35000</time>
                    </wait>
                  </run>
                </image>
                <image>
                  <alias>redis</alias>
                  <name>redis:3</name>
                  <run>
                    <ports>
                      <port>6378:6379</port>
                    </ports>
                    <wait>
                      <log>The server is now ready to accept connections on port 6379</log>
                      <time>5000</time>
                    </wait>
                  </run>
                </image>
              </images>
            </configuration>
            <executions>
              <execution>
                <id>start</id>
                <phase>pre-integration-test</phase>
                <goals>
                  <goal>build</goal>
                  <goal>start</goal>
                </goals>
              </execution>
              <execution>
                <id>stop</id>
                <phase>post-integration-test</phase>
                <goals>
                  <goal>stop</goal>
                </goals>
                <configuration>
                  <removeVolumes>true</removeVolumes>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <version>2.20</version>
            <configuration>
              <properties>
                <property>
                  <name>listener</name>
                  <value>com.rideaustin.testrail.TestCasesLogger</value>
                </property>
                <property>
                  <name>listener</name>
                  <value>org.sonar.java.jacoco.JUnitListener</value>
                </property>
              </properties>
              <forkCount>1C</forkCount>
              <reuseForks>true</reuseForks>
              <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
              <systemProperties>
                <testcases.logfile>${project.build.directory}/test-cases.log</testcases.logfile>
              </systemProperties>
            </configuration>
            <executions>
              <execution>
                <id>integration-test</id>
                <goals>
                  <goal>integration-test</goal>
                  <goal>verify</goal>
                </goals>
                <configuration>
                  <argLine>${failsafeArgLine} -Duser.timezone=UTC</argLine>
                  <includes>
                    <include>**/*IT.java</include>
                  </includes>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.10</version>
        <executions>
          <execution>
            <id>add-integration-test-source-as-test-sources</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>add-test-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>src/itest/java</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>2.5</version>
        <executions>
          <execution>
            <id>add-it-resources</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/test-classes</outputDirectory>
              <resources>
                <resource>
                  <directory>src/itest/resources</directory>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.1</version>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
        <executions>
          <execution>
            <id>compile-integration-test</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
            <configuration>
              <testIncludes>
                <testInclude>**/*IT.java</testInclude>
              </testIncludes>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

</project>